--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,20 @@ body{
     background-color: hsla(196, 92%, 45%, 0.2);
     font : normal normal normal 12px/1.5 Verdana, Arial, Helvetica, sans-serif;
 }
+aside ul{
+    list-style: square;
+}
+aside li,aside a{
+    color: rgba(254, 6, 6, 0.8);
+    line-height: 2em;
+}
+a{
+    color: rgba(253, 8, 8, 0.8);
+}
+h1{
+    color: blueviolet;
+    font-size: 30px;
+}
 h2{
     /* color: rgb(115, 170, 5); */ 
     /* here i wrote rgb instead of using 3 digit hex, please review this change */
@@ -15,15 +29,31 @@ h2{
 header{
     background-color: hsl(193, 54%, 78%);
 }
+nav ul li{
+    display: inline;
+    list-style-type: none;
+}
+nav ul li a{
+    color: indigo;
+    border: 2px solid indigo;
+    background-color: cornsilk;
+    text-decoration: none;
+    padding: 5px;
+}
+nav ul li a:hover{
+    color: cornsilk;
+    background-color: indigo;
+    border-color: cornsilk;
+}
 main{
     float: left;
-    height:  60vh;
+    /* height:  60vh; */
     width:  65vw;
 }
 aside{
     float: right;
     width:  25vw;
-    height:  60vh;
+    /* height:  60vh; */
     background-color: hsl(290, 67%, 92%);
 }
 footer{
@@ -41,13 +71,38 @@ footer{
 #para2{
     color: rgb(4, 38, 161);
 }
+form{
+    border: 5px dashed darkblue;
+    padding: 5px;
+}
+input[type=name], input[type=email], input[type=submit], input[type=select], input[type=option]{
+    display:block;
+    width: 50% ;
+    height: 2em;
+}
+input[type=radio], input[type=checkbox]{
+    height: 2em;
+    width: 2em;
+}
+select, option, label, legend, input[type=submit] {
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-variant: small-caps;
+}
+textarea{
+    display: block;
+    width: 50%;
+}
+fieldset{
+    border: none;
+}
 #para3{
     color: rgb(79, 94, 18);
 }
 p::first-letter{
     color: rgb(148, 0, 0);
 }
-a:hover{
+aside a:hover{
     color: #09c;
 }
 footer p{
