--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,18 @@
 /* Student Name: Talha Khalifa 
    Student Number: 8869673*/
+html{
+    font: normal normal normal 20px/1.5 verdana, Arial, Helvetica, sans-serif;
+}
 body{
     height : 100vh;
     width : 100vw;
     background-color: hsla(196, 92%, 45%, 0.2);
     font : normal normal normal 12px/1.5 Verdana, Arial, Helvetica, sans-serif;
+    flex-direction: row;
+}
+aside{
+    flex: 1 1 30%;
+    background-color: blueviolet;
 }
 aside ul{
     list-style: square;
@@ -18,13 +26,13 @@ a{
 }
 h1{
     color: blueviolet;
-    font-size: 30px;
+    font-size: 2rem;
 }
 h2{
     /* color: rgb(115, 170, 5); */ 
     /* here i wrote rgb instead of using 3 digit hex, please review this change */
     color: #09c;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 header{
     background-color: hsl(193, 54%, 78%);
@@ -32,6 +40,7 @@ header{
 nav ul li{
     display: inline;
     list-style-type: none;
+    padding: 0.2em;
 }
 nav ul li a{
     color: indigo;
@@ -45,24 +54,36 @@ nav ul li a:hover{
     background-color: indigo;
     border-color: cornsilk;
 }
-main{
-    float: left;
-    /* height:  60vh; */
-    width:  65vw;
+section{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space space-between;
+    align-items: stretch;
 }
+
+main{
+    /* float: left;
+    /* height:  60vh; */
+    /* width:  65vw; */
+    flex: 2 1 70%;
+    background-color: aqua;
+}
+
 aside{
-    float: right;
-    width:  25vw;
+    /* float: right;
+    width:  25vw; */
     /* height:  60vh; */
     background-color: hsl(290, 67%, 92%);
+    flex: 1 1 30%;
 }
 footer{
     clear: both;
     background-color: hsl(145, 51%, 83%);
 }
 .structural{
-    padding: 10px;
-    margin: 10px;
+    padding: 1rem;
+    margin: 1rem;
     border : 2px solid black;
 }
 #para1{
@@ -72,8 +93,9 @@ footer{
     color: rgb(4, 38, 161);
 }
 form{
-    border: 5px dashed darkblue;
-    padding: 5px;
+    border: 0.25em dashed darkblue;
+    padding: 0.5 em;
+    margin: auto;
 }
 input[type=name], input[type=email], input[type=submit], input[type=select], input[type=option]{
     display:block;
@@ -107,4 +129,30 @@ aside a:hover{
 }
 footer p{
     font-size:  .75em;
+}
+#gallery{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 1rem;
+    column-gap: 1rem;
+}
+img{
+    width: 80%;
+    height: 80%;
+}
+figure{
+    border: 0.1rem solid black;
+}
+@media (max-width: 600px){
+    html{
+        font-size: 10;
+    }
+    section{
+        display: block;
+    }
+    #gallery{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
 }
